@@ -2,6 +2,8 @@
 
 	* Makefile.am (REVISION): Increment.  Swarm 1.3.1 released.
 
+	* collections.h (Sorted): Moved to design document.
+	
 	* StringObject.m ([String_c +create:setC:]): Use getZone instead
 	of argument aZone for allocating string space.
 
